--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,12 @@
           },
           "configurations": {
             "production": {
+              "fileReplacement":[
+                {
+                  "replace": "src/environments/environments.ts",
+                  "with":"src/environments/environments.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
